--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -5,7 +5,7 @@
   <h1>Cocktails</h1>
 </div>
 
-<div class="container mt-4">
+<!-- <div class="container mt-4">
   <div class="row">
     <% @cocktails.each do |cocktail| %>
       <div class="col-4">
@@ -20,8 +20,8 @@
       </div>
     <% end %>
   </div>
-
 </div>
 <div class="container text-center mt-4 mb-4">
 <%= link_to "Create", new_cocktail_path , class:"btn btn-primary text-center"%>
 </div>
+ -->
