--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -4,8 +4,8 @@
 <div class="banner">
   <h1>Cocktails</h1>
 </div>
-
-<!-- <div class="container mt-4">
+<!--
+<div class="container mt-4">
   <div class="row">
     <% @cocktails.each do |cocktail| %>
       <div class="col-4">
