--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,5 @@
 
 // Your CSS partials
 @import "components/index";
-@import "pages/index";
-@import "cocktails";
+// @import "pages/index";
+// @import "cocktails";
