--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,5 +3,5 @@
 @import "avatar";
 @import "navbar";
 @import "banner";
-@import "card-cocktail";
-@import "banner-show";
+// @import "card-cocktail";
+// @import "banner-show";
