--- a/app/assets/stylesheets/components/_banner-show.scss
+++ b/app/assets/stylesheets/components/_banner-show.scss
@@ -1,16 +1,16 @@
 
-// .banner-show {
-//   height: 400px;
-//   display: flex;
-//   justify-content: center;
-//   align-items: center;
-//   background-position: center;
-//   background-size: cover;
-//   background-repeat: no-repeat;
-//   background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1590423859012-39c5ee2845bd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8Ym90dGxlcyUyMGJhcnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
+.banner-show {
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-image:linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url('https://images.unsplash.com/photo-1590423859012-39c5ee2845bd?ixid=MXwxMjA3fDB8MHxzZWFyY2h8OXx8Ym90dGxlcyUyMGJhcnxlbnwwfHwwfA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60');
 
-//   h1 {
-//     color: white;
-//   }
-// }
+  h1 {
+    color: white;
+  }
+}
 
