--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -1,1 +1,25 @@
- <h1>Cocktails</h1>
+
+<div class="banner">
+  <h1>Cocktails</h1>
+</div>
+
+<div class="container mt-4">
+  <div class="row">
+    <% @cocktails.each do |cocktail| %>
+      <div class="col-4">
+        <div class="card-trip">
+          <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8Y29ja3RhaWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60">
+          <div class="card-trip-infos">
+            <div>
+              <h2> <%= link_to cocktail.name, cocktail %></h2>
+            </div>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  </div>
+</div>
+<div class="container text-center mt-4 mb-4">
+<%= link_to "Create", new_cocktail_path , class:"btn btn-primary text-center"%>
+</div>
+
