--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -12,6 +12,7 @@
            Quantite: <%= dose.description  %>
            <i class="fas fa-trash"> <%= link_to 'Delete' , dose_path(dose), method: :delete %> </i>
         </h5>
+        <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
 
    <%= link_to "Index", cocktails_path, class:'btn btn-primary' %>
