--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -8,7 +8,7 @@
     <% @cocktails.each do |cocktail| %>
       <div class="col-4">
         <div class="card-trip">
-          <img src="https://images.unsplash.com/photo-1514362545857-3bc16c4c7d1b?ixid=MXwxMjA3fDB8MHxzZWFyY2h8M3x8Y29ja3RhaWx8ZW58MHx8MHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=60">
+          <%= cl_image_tag cocktail.photo.key,width: 400, height: 300, crop: :fill %>
           <div class="card-trip-infos">
             <div>
               <h2> <%= link_to cocktail.name, cocktail %></h2>
