--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -1,5 +1,5 @@
 
-<div class="banner-show">
+<div class="banner-show" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url('<%= cl_image_path @cocktail.photo.key, crop: :fit %>')">
   <h1><%= @cocktail.name  %></h1>
 </div>
 
@@ -12,7 +12,6 @@
            Quantite: <%= dose.description  %>
            <i class="fas fa-trash"> <%= link_to 'Delete' , dose_path(dose), method: :delete %> </i>
         </h5>
-        <%= cl_image_tag @cocktail.photo.key, height: 300, width: 400, crop: :fill %>
     <% end %>
 
    <%= link_to "Index", cocktails_path, class:'btn btn-primary' %>
