--- a/app/assets/stylesheets/components/_card-cocktail.scss
+++ b/app/assets/stylesheets/components/_card-cocktail.scss
@@ -9,7 +9,6 @@
 .card-trip > img {
   height: 200px;
   width: 100%;
-  object-fit: cover;
 }
 
 .card-trip h2 {
@@ -24,6 +23,49 @@
   justify-content: space-between;
   align-items: flex-end;
   position: relative;
+}
+
+.card-anim {
+cursor:pointer;
+  position:relative;
+  // padding:10px 20px;
+  background:white;
+  font-size:28px;
+  border-top-right-radius:10px;
+  border-bottom-left-radius:10px;
+  transition:all 1s;
+  &:after,&:before{
+    content:" ";
+    width:0px;
+    height:0px;
+    position:absolute;
+    border :0px solid #fff;
+    transition:all 1s;
+    }
+  &:after{
+    top:-1px;
+    left:-1px;
+    border-top:5px solid white;
+    border-left:5px solid white;
+  }
+  &:before{
+    bottom:-1px;
+    right:-1px;
+    border-bottom:5px solid white;
+    border-right:5px solid white;
+  }
+  &:hover{
+    border-top-right-radius:0px;
+  border-bottom-left-radius:0px;
+    // background:rgba(0,0,0,.5);
+    // color:white;
+    &:before,&:after{
+
+      width:100%;
+      height:100%;
+      // border-color:white;
+    }
+  }
 }
 
 
