--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,3 +5,46 @@
 @import "banner";
 @import "card-cocktail";
 @import "banner-show";
+
+.btn-anim {
+cursor:pointer;
+  position:relative;
+  padding:4px 8px;
+  //background:white;
+  font-size:28px;
+  border-top-right-radius:10px;
+  border-bottom-left-radius:10px;
+  transition:all 1s;
+  &:after,&:before{
+    content:" ";
+    width:10px;
+    height:10px;
+    position:absolute;
+    border :0px solid #fff;
+    transition:all 1s;
+    }
+  &:after{
+    top:-1px;
+    left:-1px;
+    border-top:5px solid #2070EB;
+    border-left:5px solid #2070EB;
+  }
+  &:before{
+    bottom:-1px;
+    right:-1px;
+    border-bottom:5px solid #2070EB;
+    border-right:5px solid #2070EB;
+  }
+  &:hover{
+    border-top-right-radius:0px;
+    border-bottom-left-radius:0px;
+    //background:rgba(0,0,0,.5);
+    color:white;
+    &:before,&:after{
+
+      width:100%;
+      height:100%;
+      // border-color:white;
+    }
+  }
+}
