--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -5,7 +5,7 @@
     <%= simple_form_for(@cocktail) do |f| %>
         <%= f.input :name %>
         <%= f.input :photo, as: :file %>
-        <%= f.button :submit , class:'btn btn-primary' %>
+        <%= f.button :submit , class:'btn btn-primary btn-anim' %>
     <% end %>
   </div>
 </div>
