--- a/app/views/cocktails/show.html.erb
+++ b/app/views/cocktails/show.html.erb
@@ -14,8 +14,8 @@
         </h5>
     <% end %>
 
-   <%= link_to "Index", cocktails_path, class:'btn btn-primary' %>
-   <%= link_to "Add doses", new_cocktail_dose_path(@cocktail) ,class:'btn btn-primary' %>
+   <%= link_to "Index", cocktails_path, class:'btn btn-primary btn-anim' %>
+   <%= link_to "Add doses", new_cocktail_dose_path(@cocktail) ,class:'btn btn-primary btn-anim' %>
    </div>
  </div>
 </div>
